--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-helmet": "^6.1.4",
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.2",
